# NBverse-Training

./: .gitignore  ERROR_FIXES_REPORT.md  GITHUB_UPLOAD_GUIDE.md  LICENSE  PRODUCTION_CARD_UPDATE_CHECKLIST.md  README.md  README_PRODUCTION_CARD.md  SERVER_OPTIMIZATION_REPORT.md  check_darts_installation.py  install_nbverse.bat  install_nbverse_from_existing.bat  install_nbverse_pip.bat  install_performance_optimization.bat  main.py  nbverse_helper.py  ohlcv.json  payload.json  performance_optimization_guide.md  performance_optimization_report.md  requirements_ml.txt  requirements_performance.txt  run.bat  test_orjson.py  trading_gui_app_v0.12.0_pyqt6.py  trading_gui_app_v0.12.0_pyqt6_refactored.py  upload_to_github.bat  upload_to_nbverse_training.bat
NBVerseV01-main/: .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  MANUAL_UPLOAD.md  QUICK_START.md  QUICK_UPLOAD.md  README.md  README_GITHUB.md  README_INSTALL_GIT.md  UPLOAD_NOW.bat  USAGE_COMPACT.md  __init__.py  build_package.bat  check_git.bat  check_git_detailed.bat  cli.py  compact_example.py  config.py  converter.py  download_git_simple.bat  example.py  find_and_upload.bat  hybrid_example.py  input_view.bat  input_view.py  install_git_portable.bat  push_to_github.bat  pyproject.toml  requirements.txt  run_all.bat  run_cli.bat  run_compact_example.bat  run_example.bat  run_hybrid_example.bat  run_hybrid_test.bat  run_interactive.bat  run_storage_example.bat  run_test.bat  (+9 more)
NBVerseV01-main/NBverse/: calculator.py  compact_storage.py  history.py  hybrid_storage.py  similarity.py  storage.py  utils.py
(+140 files in other folders)
