[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbverse"
version = "0.2.1"
description = "문자열을 N/B 값으로 변환하는 Python 라이브러리"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "yoohyunseog", email = "yoohyunseog@users.noreply.github.com"}
]
keywords = ["nb", "bit", "calculation", "text", "conversion", "similarity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yoohyunseog/NBVerseV01"
Repository = "https://github.com/yoohyunseog/NBVerseV01"
Issues = "https://github.com/yoohyunseog/NBVerseV01/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["NBverse"]

[tool.setuptools.package-data]
NBverse = ["*.md", "*.txt"]

